--- a/main/uikit.css
+++ b/main/uikit.css
@@ -1237,7 +1237,7 @@ form legend {
     max-width: 100%;
     width: 100%;
     padding: 4px;
-    background: rgb(250 250 250 / 65%);
+    background-color: rgb(248 248 248 / 50%);
     color: #000;
     border: 0;
     font-size: inherit;
@@ -2699,9 +2699,9 @@ form > li,
 }
 
 label.uk-label {
-    margin-right: 0.75rem;
-    width: 5.5rem;
-    min-width: 5rem;
+    margin-right: 0.5rem;
+    width: 4.5rem;
+    min-width: 4.5rem;
     justify-content: flex-end;
 }
 
