--- a/main/uikit.css
+++ b/main/uikit.css
@@ -706,13 +706,12 @@ a.uk-link-reset:hover,
 }
 
 .uk-table {
-    /* 1 */
+    border-collapse: collapse;
     border-spacing: 0;
     width: -webkit-fill-available;
     background-color: #fff;
     overflow-x: auto;
     margin: 4px 0;
-    padding: 4px;
     border-top: 1px solid #ededed;
     border-bottom: 1px solid #ededed;
 }
@@ -728,6 +727,7 @@ a.uk-link-reset:hover,
 }
 
 .uk-table td {
+    padding: 0 4px;
     height: 2.5rem;
 }
 
