--- a/mgt/uikit.css
+++ b/mgt/uikit.css
@@ -1152,6 +1152,7 @@ form legend {
     display: flex;
     align-items: center;
     font-size: 0.875rem;
+    box-sizing: border-box;
 }
 
 .uk-fieldset > ul {
